[gd_scene load_steps=18 format=3 uid="uid://dg4mo1stij2x6"]

[ext_resource type="Script" path="res://scenes/soldier.gd" id="1_aww6x"]
[ext_resource type="PackedScene" uid="uid://2evfdevetuuv" path="res://scenes/bullet.tscn" id="2_i2xme"]
[ext_resource type="Texture2D" uid="uid://curkdqm4ojg1s" path="res://assets/vikingo/vikingo.svg" id="3_fpsk7"]
[ext_resource type="PackedScene" uid="uid://cg62420mdncpj" path="res://scenes/health_bar.tscn" id="4_nth7y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_56nh7"]
radius = 16.0

[sub_resource type="Animation" id="Animation_wxn1t"]
resource_name = "Down_Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_soldier:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fpsk7")]
}

[sub_resource type="Animation" id="Animation_dihs1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("spr_soldier:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fpsk7")]
}

[sub_resource type="Animation" id="Animation_87grv"]
resource_name = "Right_Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_soldier:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fpsk7")]
}

[sub_resource type="Animation" id="Animation_msows"]
resource_name = "Up_Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spr_soldier:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfd0x"]
_data = {
"Down_Idle": SubResource("Animation_wxn1t"),
"RESET": SubResource("Animation_dihs1"),
"Right_Idle": SubResource("Animation_87grv"),
"Up_Idle": SubResource("Animation_msows")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vpw1l"]
animation = &"Down_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0xda5"]
animation = &"Right_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i42i2"]
animation = &"Up_Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yhddf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w0ik8"]
states/Down_Idle/node = SubResource("AnimationNodeAnimation_vpw1l")
states/Down_Idle/position = Vector2(465.333, 223.333)
states/Right_Idle/node = SubResource("AnimationNodeAnimation_0xda5")
states/Right_Idle/position = Vector2(566.667, 139.667)
states/Start/position = Vector2(216, 146.667)
states/Up_Idle/node = SubResource("AnimationNodeAnimation_i42i2")
states/Up_Idle/position = Vector2(470, 61.6667)
transitions = ["Start", "Down_Idle", SubResource("AnimationNodeStateMachineTransition_yhddf")]
graph_offset = Vector2(55, -174)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_3oruw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_60h0b"]
radius = 32.0

[node name="red_soldier" type="CharacterBody2D" groups=["team_red"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 5
input_pickable = true
script = ExtResource("1_aww6x")
target_team = "team_blue"
bullet = ExtResource("2_i2xme")

[node name="spr_soldier" type="Sprite2D" parent="."]
texture_filter = 2
texture = ExtResource("3_fpsk7")

[node name="col_soldier" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_56nh7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Down_Idle"
libraries = {
"": SubResource("AnimationLibrary_kfd0x")
}

[node name="Agent" type="NavigationAgent2D" parent="."]
navigation_layers = 7
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 24.0
autostart = true

[node name="anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_w0ik8")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_3oruw")

[node name="damage_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="col_damage" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("CircleShape2D_60h0b")
debug_color = Color(0.964706, 0, 0.486275, 0.419608)

[node name="hurt_timer" type="Timer" parent="."]

[node name="health_bar" parent="." instance=ExtResource("4_nth7y")]
position = Vector2(0, -16)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="velocity_computed" from="Agent" to="." method="_on_agent_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
